--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9ea519d7-faad-4234-9bf9-7170b7cf2ec9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
